# meshmon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  compose.yml  docker-compose.yml  mkdocs.yml  nodeconf.yml  public_cluster.md  pyproject.toml
.github/workflows/: build.yml  check-version.yml  lint.yml  quality-check.yml  run-tests.yml  test.yml
conf/: nodeconf.yml.example
docs/: development.md  distomon.md  index.md  public_cluster.md  quick-start.md  run.md
docs/configuration/: config-managment.md  network.md  node.md
docs/configuration/advanced/: propagation-tuning.md
docs/deployment/: docker.md  prometheus.md  secure-grpc.md
src/: analysis.py  server.py  test.py  webhooks.py
src/analysis/: analysis.py  store.py
src/distmon/: config.py  conman.py  crypto.py  distrostore.py  monitor.py  version.py
src/meshmon/: config.py  conman.py  crypto.py  distrostore.py  dstypes.py  event_log.py  git.py  lifecycle.py  monitor.py  prom_export.py  update.py  update_handlers.py  utils.py  version.py  webhooks.py
src/meshmon/analysis/: analysis.py  store.py
src/meshmon/api/: processor.py
src/meshmon/config/: bus.py  config.py
src/meshmon/connection/: connection.py  generate_grpc.py  grpc_client.py  grpc_server.py  grpc_types.py  heartbeat.py  meshmon.proto  (+2 more)
src/static/: index.html
tests/: test_utils_format_pydantic_error.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.css
web/types/: elkjs.d.ts
(+107 files in other folders)
