[project]
name = "meshmon"
version = "0.1.0"
description = "distrobuted cpu stresser"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "cryptography (>=45.0.7,<46.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "bcrypt (==4.0.1)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
